--- a/Z-Knight/src/main/resources/validation_zh.properties
+++ b/Z-Knight/src/main/resources/validation_zh.properties
@@ -22,6 +22,7 @@
 # SOFTWARE.
 #
 field.not.empty=必填字段
+size.email.over_length=邮箱地址超过64个字符
 size.account.form.name=账号需要6~32个字符
 duplicate.account.form.name=用户名已经被占用
 duplicate.account.form.email=邮箱已经被占用
