--- a/Z-Knight/src/main/resources/validation_zh.properties
+++ b/Z-Knight/src/main/resources/validation_zh.properties
@@ -27,4 +27,4 @@ size.account.form.name=账号需要6~32个字符
 duplicate.account.form.name=用户名已经被占用
 duplicate.account.form.email=邮箱已经被占用
 size.account.form.password=密码长度不少于8个字符
-email.valid=无效的邮箱
+valid.email=无效的邮箱
